<resources>
    <string name="app_name">Hotels</string>
    <string name="app_version" translatable="false">v1.0</string>
    <string name="app_about">&lt;i&gt;%1$s %2$s&lt;/i&gt;
        &lt;br&gt;&lt;font color="#aaaaaa"&gt;_________________________&lt;/font&gt;
        &lt;br&gt;&lt;br&gt;A small test app by %3$s.</string>

    <string name="dev_name" translatable="false">N+N Apps</string>
    <string name="dev_email" translatable="false">
        &lt;a href=\"mailto:nplusnapps@gmail.com\"&gt;%s&lt;/a&gt;</string>

    <string name="hotels_url" translatable="false">
        https://dl.dropboxusercontent.com/u/1875854/1/0777.json</string>

    <string name="no_hotels_stub">No hotels.</string>

    <string name="snackbar_connection">No internet connection.</string>
    <string name="snackbar_data">Failed to load data.</string>
    <string name="snackbar_retry">RETRY</string>


    <string name="toast_maps">No maps available.</string>

    <string name="action_sort">Sort by</string>
    <string name="action_sort_stars">Star rating</string>
    <string name="action_sort_suites">Available suites</string>
    <string name="action_sort_distance">Distance to center</string>
    <string name="action_about">About</string>

    <string name="title_activity_details">Details</string>
    <string name="title_activity_update">Updating&#8230;</string>
    <string name="title_activity_download">Downloading %1$d/%2$d</string>

    <string name="details_hotel">
        &lt;b&gt;ADDRESS:&lt;/b&gt; %1$s&lt;br/&gt;&lt;br/&gt;
        &lt;b&gt;AVAILABLE SUITES:&lt;/b&gt; %2$s&lt;br/&gt;&lt;br/&gt;
        &lt;b&gt;DISTANCE TO THE CITY CENTER:&lt;/b&gt; %3$s</string>

    <string name="desc_hotel_image">Hotel image</string>
    <string name="desc_hotel_map">Show on the map</string>
</resources>
